COLLADA branch: partial fix of bug #20634

* scale and rotation of objects with negative scale is exported correctly. This is accomplished by:
** if ob has no parent, use ob->rot, ob->scale values directly
** if ob has a parent, a local matrix is computed without scale and rotation is derived from it, scale value is copied directly from ob->size

Noted a few other bugs:
* importer suffers from negative scale problem too
* bones with negative scale are exported incorrectly too
* object animation values are copied from FCurves which is not ok for child objects where values should be in parent-space